--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
       window.location.href = `mailto:${mailto}?subject=${subject}&body=${body}`;
     };
   </script>
-</body>
+</body><div style="position: fixed; top: 10px; left: 10px;">
+  <img src="s-icon.jpeg" alt="S Icon" style="width: 60px; height: 60px; border-radius: 10px;">
+</div>
+
 </html>
