--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>SSC CGL Meeting Email</title>
+  <link rel="icon" type="image/jpeg" href="s-icon.jpeg">
 </head>
+
 <body style="font-family: sans-serif; padding: 20px; text-align: center;">
   <h1>Send Email to Hon’ble MoS (PP)</h1>
   <p>Tap the button below to draft the email from your account:</p>
@@ -29,11 +31,3 @@
         "Contact: +91-8219239139\n" +
         "Sincerely,\nConcerned SSC CGL 2024 Aspirants"
       );
-      window.location.href = `mailto:${mailto}?subject=${subject}&body=${body}`;
-    };
-  </script>
-</body><div style="position: fixed; top: 10px; left: 10px;">
-  <img src="s-icon.jpeg" alt="S Icon" style="width: 60px; height: 60px; border-radius: 10px;">
-</div>
-
-</html>
