--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <h1>Send Meeting Request Email</h1>
   <p>Tap a button below to draft and send the email from your Gmail account:</p>
 
-  <!-- Button for Hon'ble MoS (PP) -->
+  <!-- Button for Dr. Jitendra Singh -->
   <button onclick="sendToMoS()" style="font-size: 18px; padding: 10px 20px; margin: 10px;">
-    📧 Email Hon'ble MoS (PP)
+    📧 DR. JITENDRA SINGH
   </button>
 
-  <!-- Button for PS, DoPT -->
+  <!-- Button for Secretary -->
   <button onclick="sendToPSDoPT()" style="font-size: 18px; padding: 10px 20px; margin: 10px;">
-    📧 Email PS, DoPT
+    📧 SECRETARY
   </button>
 
   <script>
