--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <script>
     function sendToMoS() {
-      const mailto = 'drjitendras@gmail.com,apsmospmo@gmail.com,jitendra.s@mp.sansad.in,mos-pp@nic.in,ps.dopt@nic.in';
+      const mailto = 'drjitendras@gmail.com,apsmospmo@gmail.com,jitendra.s@mpls.sansad.in,mos-pp@nic.in,ps.dopt@nic.in';
       const subject = encodeURIComponent("Urgent Meeting Request with Hon’ble MoS (PP) Regarding SSC CGL 2025 Age Reckoning Date");
       const body = encodeURIComponent(
         "Respected Sir,\n\n" +
