--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
 
     function sendToPSDoPT() {
-      const mailto = 'ps.dopt@nic.in';
+      const mailto = 'secy_mop@nic.in ';
       const subject = encodeURIComponent("Request for Meeting Regarding SSC CGL 2025 Age Reckoning Date");
       const body = encodeURIComponent(
         "Respected Madam,\n\n" +
