--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body style="font-family: sans-serif; padding: 20px; text-align: center;">
-  <h1>Send Meeting Request Emails</h1>
+  <h1>Send Meeting Request Emails To Dr Jitendra Singh</h1>
   <p>Tap a button below to draft and send the email. Sent emails will turn green.</p>
 
   <div id="buttonsContainer" style="display: flex; flex-direction: column; align-items: center; gap: 10px;"></div>
