--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       },
       {
         subject: "Corr. No. 2792565, Last -Attempt CGL Aspirants Await Your Fast Recommendation",
-        body: `Respected Shri Manoj Kumar Dwivedi ji,\n\nWe kindly request you to recommend 1 January 2025 as the age reckoning date for CGL 2025 without delay.\n\nThe Secretary has trusted you with this, and thousands are relying on you before 4 July closes their last opportunity.\n\nSincerely,\nConcerned SSC CGL 2024 Aspirants\nContact: 8219239139`
+        body: `Respected Sir,\n\nWe kindly request you to recommend 1 January 2025 as the age reckoning date for CGL 2025 without delay.\n\nThe Secretary has trusted you with this, and thousands are relying on you before 4 July closes their last opportunity.\n\nSincerely,\nConcerned SSC CGL 2024 Aspirants\nContact: 8219239139`
       },
       {
         subject: "Corr. No. 2792565 - Recommend 1 Jan Cut-off Now to Save Aspirants Before Deadline",
-        body: `Respected Shri Manoj Kumar Dwivedi ji,\n\nPlease kindly expedite your report recommending 01.01.2025 as the age cut-off for SSC CGL 2025.\n\nThe time left is very short. This small step can change the lives of many who were wronged in 2024.\n\nSincerely,\nConcerned SSC CGL 2024 Aspirants\nContact: 8219239139`
+        body: `Respected Sir,\n\nPlease kindly expedite your report recommending 01.01.2025 as the age cut-off for SSC CGL 2025.\n\nThe time left is very short. This small step can change the lives of many who were wronged in 2024.\n\nSincerely,\nConcerned SSC CGL 2024 Aspirants\nContact: 8219239139`
       },
       {
         subject: "Corr. No. 2792565 - SSC CGL Deadline Nearing: Kindly Send Recommendation Soon",
