--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body style="font-family: sans-serif; padding: 20px; text-align: center;">
-  <h1>Send Recommendation Request Emails to Shri Manoj Kumar Dwivedi</h1>
+  <h1>Send Emails to Shri Manoj Kumar Dwivedi</h1>
   <p>Click a button below to open a drafted email. Sent emails will turn green.</p>
 
   <div id="buttonsContainer" style="display: flex; flex-direction: column; align-items: center; gap: 10px;"></div>
